--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,29 +1,5 @@
 pipeline {
     agent any
-    environment {
-            SMTP_PASS = credentials('9530076d-e84b-4f24-a8a7-30e68f51f17a')
-        }
-	parameters {
-	choice(
-		name: 'TASKS',
-		choices: ['smoke_tests', 'regression_tests', 'ui_tests', 'api_tests', 'test'],
-		description: 'Выбор тестового прогона'
-		)
-	choice(
-		name: 'VNC_ENABLED',
-		choices: ['true', 'false'],
-		description: 'Отображение экрана браузера в Selenoid'
-		)
-	choice(
-		name: 'VIDEO_ENABLED',
-		choices: ['false', 'true'],
-		description: 'Запись видео в Selenoid'
-		)
-    string(
-       name: 'EMAIL',
-       defaultValue: 'test@mail.ru',
-       description: 'Email адреса для отправки результатов тестового прогона, укзываются через запятую')
-	}
     stages {
         stage('Clean') {
           steps {
@@ -31,18 +7,18 @@ pipeline {
             sh './gradlew clean'
           }
         }
-        stage('Test') {
-          steps {
-			script {
-			try {
-				sh './gradlew test --no-daemon --warning-mode=all'
-			}
-			catch (Exception e) {
-				println("Error ${e}")
-			}
-          }
-		  }
-        }
+//         stage('Test') {
+//           steps {
+// 			script {
+// 			try {
+// 				sh './gradlew test --no-daemon --warning-mode=all'
+// 			}
+// 			catch (Exception e) {
+// 				println("Error ${e}")
+// 			}
+//           }
+// 		  }
+//         }
 //         stage('Allure Report') {
 //           steps {
 //             allure([
