--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,10 +2,10 @@ pipeline {
     agent any
     stages {
         stage('Clean') {
-          steps {
-            sh 'chmod +x gradlew'
-            sh './gradlew clean'
-          }
+//           steps {
+//             sh 'chmod +x gradlew'
+//             sh './gradlew clean'
+//           }
         }
 //         stage('Test') {
 //           steps {
