--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,42 +2,10 @@ pipeline {
     agent any
     stages {
         stage('Clean') {
-//           steps {
-//             sh 'chmod +x gradlew'
-//             sh './gradlew clean'
-//           }
+          steps {
+            sh 'chmod +x gradlew'
+            sh './gradlew clean'
+          }
         }
-//         stage('Test') {
-//           steps {
-// 			script {
-// 			try {
-// 				sh './gradlew test --no-daemon --warning-mode=all'
-// 			}
-// 			catch (Exception e) {
-// 				println("Error ${e}")
-// 			}
-//           }
-// 		  }
-//         }
-//         stage('Allure Report') {
-//           steps {
-//             allure([
-//             includeProperties: false,
-//             jdk: '',
-//             properties: [],
-//             reportBuildPolicy: 'ALWAYS',
-//             results: [[path: 'build/allure-results']]
-//             ])
-//           }
-//         }
-// 		stage('Email Report') {
-//             steps {
-//                 script{
-// 					writeFile file: "notifications/config.json", text: "{\"base\":{\"logo\":\"\",\"project\":\"${JOB_BASE_NAME}\",\"environment\":\"https://test.ru\",\"comment\":\"Was launched ${TASKS} in Jenkins\",\"reportLink\":\"${BUILD_URL}\",\"language\":\"en\",\"allureFolder\":\"./allure-report/\",\"enableChart\":true},\"mail\":{\"host\":\"smtp.gmail.com\",\"port\":\"465\",\"username\":\"test_mail@gmail.com\",\"password\":\"${SMTP_PASS}\",\"securityProtocol\":\"SSL\",\"from\":\"test@mail.ru\",\"recipient\":\"${EMAIL}\"}}"
-//                     sh 'java "-DconfigFile=notifications/config.json" -jar notifications/allure-notifications-4.3.0.jar'
-//             }
-//             }
-//         }
     }
 }
-
