--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,4 +8,16 @@ pipeline {
           }
         }
     }
+	stage('Test') {
+	  steps {
+		script {
+		try {
+			sh './gradlew test --no-daemon --warning-mode=all'
+		}
+		catch (Exception e) {
+			println("Error ${e}")
+		}
+	  }
+	  }
+	}
 }
